# c_ookieclicker

./: .clang-format  .cookieclicker.save  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Game.cpp  Game.h  README.md  gamedata  main.cpp  run_all_tests.sh
.github/: FUNDING.yml
.github/workflows/: build-NO-BOOST-all-platforms.yml  build-all-platforms.yml  c-cpp.yml  codeql-analysis.yml
.run/: All Ctest.run.xml  Commands_tst.run.xml  Game_tst.run.xml  Store_tst.run.xml  Wallet_tst.run.xml  all tests.run.xml  cookieclicker_linux.run.xml  run_all_tests.run.xml
lib/: checkstyle.sh
lib/googletest/: CONTRIBUTORS
lib/googletest-1.10.0/docs/: primer.md
lib/googletest-1.10.0/include/gtest/: gtest-printers.h  gtest-test-part.h  gtest_pred_impl.h
lib/googletest-1.10.0/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-string.h  gtest-type-util.h
lib/googletest-1.10.0/samples/: prime_tables.h  sample2.h  sample3-inl.h
lib/googletest-1.10.0/src/: gtest-port.cc
lib/googletest-1.10.0/test/: gtest-typed-test_test.h
lib/googletest/docs/: advanced.md  faq.md
lib/googletest/include/gtest/: gtest-death-test.h  gtest-matchers.h  gtest-message.h  gtest-param-test.h  gtest-spi.h  gtest-typed-test.h  gtest.h
lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-filepath.h  gtest-port.h
lib/googletest/samples/: sample4.h
lib/googletest/src/: gtest-death-test.cc  gtest-internal-inl.h
lib/googletest/test/: production.h
rc/: cmakeConfig.h
releases/: Game_v101
releases/104/: Game_v104
releases/105/: Game_105_linux
releases/105/gamedata/achievements/: .CookiesPerSecondAchievements.csv.swp  CookieAmountAchievements.csv  CookiesPerSecondAchievements.csv
releases/106/gamedata/achievements/: CookiesViaInputAchievements.csv
src/: CMakeLists.txt  Game.cpp  cmakeConfig.h.in  config.hpp.in  main.cpp
src/Achievements/: CMakeLists.txt
src/Achievements/src/: Achievement.h  AchievementList.h  Achievements.h  CMakeLists.txt  CookieAmountAchievement.cpp  CookieAmountAchievement.h  CookieAmountAchievementList.h  CookiesPerSecondAchievement.cpp  CookiesPerSecondAchievement.h  CookiesViaInputAchievement.cpp  CookiesViaInputAchievement.h
src/Achievements/tst/: Achievement-test.cpp  AchievementList-test.cpp  Achievements-test.cpp  AmountAchievementList-test.cpp  CMakeLists.txt  CookieAmountAchievement-test.cpp  CookieAmountAchievementList-test.cpp  CookiesViaInput-test.cpp
src/Achievements/tst/data/: amountachievements.csv
src/Commands/: CMakeLists.txt
src/Commands/src/: BuyItemCommand.cpp  BuyItemCommand.h  CMakeLists.txt  Command.h  UpdateCookiesCommand.cpp  UpdateCookiesCommand.h  UpdateCookiesViaInputCommand.cpp  UpdateCookiesViaInputCommand.h  UpdateCpsCommand.cpp  UpdateCpsCommand.h  UpgradeItemCommand.cpp  UpgradeItemCommand.h
src/Commands/tst/: BuyItemCommand-test.cpp  CMakeLists.txt  UpdateCookiesCommand-test.cpp  UpdateCookiesCommandViaInput-test.cpp  UpdateCpsCommand-test.cpp  UpgradeItemCommand-test.cpp  main.cpp
src/CookieNumber/src/: CMakeLists.txt  CookieNumber.cpp  CookieNumber.h  CookieNumber2.cpp  CookieNumber2.h
src/CookieNumber/tst/: CMakeLists.txt  CookieNumber-test.cpp  CookieNumber2-test.cpp
src/Game/: CMakeLists.txt
src/Game/src/: .syncthing.GameLoop.cpp.tmp  CMakeLists.txt  CookieNumbers.cpp  CookieNumbers.h  Game.cpp  Game.h  GameLoop.cpp  GameLoop.h  Globals.h  Inventory.cpp  Inventory.h  Item.h  Observer.h  RegularCookieNumber.h  Save.cpp  Save.h  Subject.h  filesystem.h  main.cpp  notifyMessage.cpp  notifyMessage.h  terminalCodes.h
src/Game/tst/: .syncthing.Save-test.cpp.tmp  CMakeLists.txt  CookieNumbers-test.cpp  Game-test.cpp  Gameloop-test.cpp  Inventory-test.cpp  Observer-test.cpp  Save-test.cpp  Z_Gameloop-test.cpp  notifyMessage-test.cpp
src/Game/tst/data/: justLoad.save  justLoad.save1  justLoad.save2
src/Screen/: CMakeLists.txt
src/Screen/src/: AchievementListView.cpp  AchievementListView.h  AchievementView.cpp  AchievementView.h  CMakeLists.txt  InputModeView.cpp  InputModeView.h  InventoryView.cpp  InventoryView.h  ItemStoreShelfView.cpp  ItemStoreShelfView.h  ItemStoreView.cpp  ItemStoreView.h  MainView.cpp  MainView.h  MessageView.cpp  MessageView.h  OptionsView.cpp  OptionsView.h  Screen.cpp  Screen.h  StatusView.cpp  StatusView.h  StoreShelfView.cpp  StoreShelfView.h  StoreView.cpp  StoreView.h  UpgradeView.cpp  UpgradeView.h  View.h
src/Screen/tst/: CMakeLists.txt  MainView-test.cpp  Screen-test.cpp  main.cpp
src/Store/src/: CMakeLists.txt  Item.h  ItemStore.cpp  ItemStore.h  Store.cpp  Store.h
src/Store/tst/: CMakeLists.txt  Item-test.cpp  ItemStore-test.cpp  Store-test.cpp  main.cpp
src/Wallet/src/: CMakeLists.txt  Wallet.cpp  Wallet.h
src/Wallet/tst/: CMakeLists.txt  Wallet-test.cpp
tst/: Game-test.cpp
